--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pyaes==1.6.1
 pyasn1==0.4.8
 pyTelegramBotAPI==4.1.1
 python-dateutil==2.8.2
-python-docx @ git+git://github.com/KehaoWu/python-docx.git@8821651796628f576b98f47662adabb16da7c9fa
+python-docx @ git+https://github.com/KehaoWu/python-docx.git@8821651796628f576b98f47662adabb16da7c9fa
 python-pptx==0.6.18
 PyYAML==6.0
 regex==2021.11.1
